# devops

./: .gitignore  .nojekyll  _quarto.yml  devops.Rproj  eda.html  eda.qmd  model.html  model.qmd  my-db.duckdb  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
