[project]
name = "devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "jupyter>=1.1.1",
    "numpy>=2.2.2",
    "palmerpenguins>=0.1.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "vetiver>=0.2.6",
]
